components/cluster-configs/longhorn-storage/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  annotations:
    openshift.io/display-name: Longhorn Storage
